@startuml registry

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram includes
!include convert.puml

' class diagram (https://plantuml.com/class-diagram)
$package(communication.registry) {
    class SerializerRegistry<T: class> {
        - serializerProvider: Function<T, Serializer<T>> {readOnly}
        --
        + SerializerRegistry(serializerProvider: Function<T, Serializer<T>>)
        + serialize(T: object): String
    }
    communication.convert.Serializer <|.. SerializerRegistry

    class ParserRegistry<T: class> {
        - parserProvider: Function<String, Parser<T>> {readOnly}
        --
        + ParserRegistry(parserProvider: Function<String, Parser<T>>)
        + parse(data: String): String
    }
    communication.convert.Parser <|.. ParserRegistry

    class ConverterRegistry<T: class> {
        - serializerProvider: Function<T, Serializer<T>> {readOnly}
        - parserProvider: Function<String, Parser<T>> {readOnly}
        --
        + ConverterRegistry(serializerProvider: Function<T, Serializer<T>>,
            parserProvider: Function<String, Parser<T>>)
        + serialize(T: object): String
        + parse(data: String): String
    }
    communication.convert.Converter <|.. ConverterRegistry
}

@enduml
